--- a/angular.json
+++ b/angular.json
@@ -3,11 +3,11 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "andemo": {
+    "PROJECT-NAME": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
-          "style": "scss"
+          "style": "less"
         }
       },
       "root": "",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/andemo",
+            "outputPath": "dist/PROJECT-NAME",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -33,8 +33,7 @@
               }
             ],
             "styles": [
-              "src/theme.less",
-              "src/styles.scss"
+              "src/styles.less"
             ],
             "scripts": []
           },
@@ -73,18 +72,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "andemo:build"
+            "browserTarget": "PROJECT-NAME:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "andemo:build:production"
+              "browserTarget": "PROJECT-NAME:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "andemo:build"
+            "browserTarget": "PROJECT-NAME:build"
           }
         },
         "test": {
@@ -99,7 +98,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.less"
             ],
             "scripts": []
           }
@@ -121,16 +120,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "andemo:serve"
+            "devServerTarget": "PROJECT-NAME:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "andemo:serve:production"
+              "devServerTarget": "PROJECT-NAME:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "andemo"
+  "defaultProject": "PROJECT-NAME"
 }
